added support for transfer courses
